5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1822_1646.log
== TEST (2019-06-13 11:05:03) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0

for x in saque:
	if(saque[x]<=50):
		min = min + 1
	elif(saque[x]>50):
		max = max + 1
print(min)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:05:51) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:06:08) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:10:49) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0
new = zeros(saque, dtype = int)

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
for y in range(saque):
	if(saque[y]<=50):
		new[0] = saque[y]
print(new)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:01) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0
new = zeros(saque, dtype = int)

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
for y in range(saque):
	if(y<=50):
		
-- ERROR:
File "XXXX", line 19
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:20) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0
new = zeros(saque, dtype = int)

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
for y in range(saque):
	if(y<=50):
		a = a + 1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:19:49) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0
new = zeros(saque, dtype = int)

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
for y in range(saque[y]):
	if(y<=50):
		new[0] = y
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:02) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0
new = zeros(saque, dtype = int)

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
for y in range(saque[a]):
	if(y<=50):
		new[0] = y
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:21) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0
new = zeros(saque, dtype = int)

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
for y in range(saque[a]):
	if(y<=50):
		new[0] = y
print(new)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:20:49) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0
new = zeros(saque, dtype = int)

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)

		
-- EXECUTION TIME:
1.08286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1822/1646/main.py", line 8, in <module>
    new = zeros(saque, dtype = int)
MemoryError

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:09) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(size(min), dtype = int)
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:49) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:23:01) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:24:19) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in saque:
	if(y<=50):
		new[0] = y
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:12) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[0] = y
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[y] = saque[y]
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[y] = saque[y]
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[y] = saque[y]
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[y] = saque[y]
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[y] = saque[y]
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[y] = saque[y]
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[y] = saque[y]
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[y] = saque[y]
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:46) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(y<=50):
		new[y] == saque[y]
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:27:23) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(saque[y]<=50):
		saque[y] = new[y]
		
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:28:38) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(saque[y]<=50):
		
		
print(new)

		
-- ERROR:
File "XXXX", line 20
    print(new)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:29:17) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(saque[y]<=50):
		saque[y] = new[a]
		
		
print(new)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:31:48) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in range(size(saque)):
	if(saque[y]<=50):
		a = 1
print(range(size(saque)))
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:38) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in saque:
	if(saque[0]<=50):
		saque[0] = new [0]
	elif(saque[1]<=50):
		saque[1] = new[1]
print(new)
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:41:52) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in new:
	if(saque[x]<=50):
		saque[x] = new[y]
	print(new)
		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:06) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in new:
	if(x<=50):
		saque[x] = new[y]
	print(new)
		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:28) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in new:
	if(x<=50):
		saque[x] = new[y]
	print(new)
		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:42:37) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in new:
	if(x<=50):
		saque[x] = new[y]
print(new)
		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:43:22) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in new:
	if(x<=50):
		new[0] = saque[x]
print(new)
		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:43:26) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in new:
	if(x<=50):
		new[0] = saque[x]
print(new)
		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:44) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in new:
	if(x<=50):
		new[y] = y + 1

		
print(new)
		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:44:58) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for y in new:
	if(x<=50):
		new[y] = 1

		
print(new)
		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:26) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for a in saque:
	if(saque[x]<=50):
		saque[x] = new[a]
print(new)
		

		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:50:46) 
-- CODE:
from numpy import*
saque = array(eval(input("saque: ")))

max = 0
min = 0
a = 0
b = 0

for x in saque:
	if(x<=50):
		min = min + 1
	elif(x>50):
		max = max + 1
print(min)
new = zeros(min, dtype = int)
for a in saque:
	if(x<=50):
		x = new[a]
print(new)
		

		
		
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
